syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoweb.protorest.account.proto.rest.data";

package account.rest.data;

message Account {
    int64 account_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
}
